CHATS_SIT/force-app/main/default/objects/Global_Static_Value__mdt.object
<CustomObject>
    <description>This should be used for all static key value pair as an environment variables.</description>
    <fields>
        <fullName>Category__c</fullName>
        <description>Give the category to make this record uniquely available.</description>
        <label>Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Give the actual value which should be referenced in custom code.</description>
        <label>Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Global Static Value</label>
    <pluralLabel>Global Static Values</pluralLabel>
</CustomObject>